# HornetDetection

./: .gitignore  LICENSE  README.md  YOLO_inference.py
OptimizedInference/: CMakeLists.txt  README.md  main.cpp
